--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,9 +1,16 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=STISDongThapV1;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JwtSettings": {
+    "Secret": "anh@dev2025@stis20025#secretkey&05092019",
+    "TokenTimeLife": "1.00:00:00"
   },
   "AllowedHosts": "*"
 }
