update _context > _unitOfWork

--- a/WebAPI/appsettings.Development.json
+++ b/WebAPI/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=STISDongThapV1;"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=STISDongThapV1;userName=postgres;password=123456"
   }
 }
