--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=STISDongThapV1;"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=STISDongThapV1;userName=postgres;password=123456"
   },
   "Logging": {
     "LogLevel": {
